<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrageRomantisch">


    <ProgressBar
        android:id="@+id/progressBarFrageRomantisch"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:progress="58"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewWeiter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewWeiter" />


    <TextView
        android:id="@+id/textViewFrageRomantisch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/FrageRomantisch"
        android:textAlignment="center"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/RG_Auswahl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRomantisch"/>

    <RadioGroup
        android:id="@+id/RG_Auswahl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/viewText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFrageRomantisch">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="263dp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="175dp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>

    <view
        android:id="@+id/viewText"
        class="android.support.constraint.ConstraintLayout"
        id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewWeiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RG_Auswahl">

        <TextView
            android:id="@+id/textViewStimmeZu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/stimmeZu"
            android:textSize="12sp"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTeilsTeils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/teilsTeils"
            android:textSize="12sp"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@+id/textViewStimmeNichtZu"
            app:layout_constraintStart_toEndOf="@+id/textViewStimmeZu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewStimmeNichtZu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/stimmeNichtZu"
            android:textSize="12sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </view>

    <ImageView
        android:id="@+id/imageViewRomantisch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textViewFrageRomantisch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/romantisch1" />

    <ImageView
        android:id="@+id/imageViewWeiter"
        android:layout_width="77dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="weiterButtonClick"
        android:scaleType="fitCenter"
        android:text="@string/weiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewText"
        app:srcCompat="@drawable/vor"
        tools:background="@drawable/roundbutton" />

</android.support.constraint.ConstraintLayout>