<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hauptmenue"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="229dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/WuCuBerater_Logo"
        android:cropToPadding="false"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/Hauptmenue1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/HauptmenueStylequiz"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/Hauptmenue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:srcCompat="@drawable/hauptmenue2" />

    <ImageView
        android:id="@+id/Hauptmenue2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/HauptmenueStylequiz"
        android:onClick="openFashionquiz"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/Hauptmenue3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hauptmenue1"
        app:srcCompat="@drawable/hauptmenue1" />

    <ImageView
        android:id="@+id/Hauptmenue3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/HauptmenueStylequiz"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPinterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hauptmenue2"
        app:srcCompat="@drawable/hauptmenue3" />

    <ImageView
        android:id="@+id/imageViewFacebook"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openFacebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageViewInstagram"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openInstagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewFacebook"
        app:srcCompat="@drawable/instagramm" />

    <ImageView
        android:id="@+id/imageViewPinterest"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openPinterest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewInstagram"
        app:srcCompat="@drawable/pinterest" />

    <ImageView
        android:id="@+id/imageViewYoutube"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="openYoutube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPinterest"
        app:srcCompat="@drawable/youtube" />

    <ImageView
        android:id="@+id/imageViewStart"
        android:layout_width="171dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openFashionquiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Hauptmenue2"
        app:srcCompat="@drawable/start" />

    <TextView
        android:id="@+id/textViewZurAuswertung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/Auswertung"
        android:onClick="startAuswertung"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>